# carbon_check_field

./: .env.example  .flutter-plugins-dependencies 2  .gitignore  .metadata  .vercelignore  CLEANUP_SUMMARY.md  DEPLOYMENT.md  FINAL_SETUP.md  INSTALL.md  KEYSTORE_BACKUP_INFO.md  KEYS_SETUP.md  LICENSE  MIGRATION_COMPLETE.md  QUICK_START.md  README.md  README_VENV.md  RELEASE_NOTES.md  SETUP_GUIDE.md  SETUP_PYTHON313.md  TECHNICAL_OVERVIEW.md  TESTING_GUIDE.md  analysis_options.yaml  generate_web_config.sh  pubspec.yaml  pyproject.toml  requirements-all.txt  vercel.json
android/: build.gradle  local.properties
android_backup/: build.gradle  local.properties
api/: carboncheck-config.js
assets/: service-account.json.template
backend/: .dockerignore  DEPLOYMENT_STEPS.md  Dockerfile  README.md  app.py  deploy.sh  earth_engine_features.py  requirements.txt  setup_and_deploy.sh
docs/: APP_SECTIONS.md  APP_STORE_DEPLOYMENT.md  AUTOMATED_DATA_COLLECTION.md  BUNDLE_ID_REGISTRATION.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  EVALUATION_STANDALONE.md  FEATURE_ENGINEERING_IMPLEMENTATION.md  FIX_PROVISIONING_PROFILE.md  GOOGLE_PLAY_DESCRIPTIONS.md  GOOGLE_PLAY_MARKETING.md  INSTALLATION.md  IOS_DEVELOPMENT.md  IOS_UPLOAD_GUIDE.md  MODEL_EVALUATION_GUIDE.md  NEXT_STEPS_AFTER_BUNDLE_ID.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  RUNNING.md  SAMPLING_BUFFER_FIX.md  TENSORBOARD_CLEANUP.md  TENSORBOARD_DEBUGGING_SUMMARY.md  TENSORBOARD_DOUBLE_SLASH_FIX.md  TENSORBOARD_EVALUATION_FIX.md  TENSORBOARD_FIX_COMPLETE.md  TENSORBOARD_MLFLOW_SETUP.md  TENSORBOARD_VIEWING_GUIDE.md  TRAINING_MONITORING.md
ios/: ExportOptions.plist
lib/: firebase_options.dart  main.dart
ml_pipeline/: CONFIG_MANAGEMENT.md  DEPLOYMENT_AND_TESTING.md  MODEL_EVALUATION_GUIDE.md  NDVI_info  NEW_ARCHITECTURE.md  QUICK_START.md  SIMPLIFIED_ARCHITECTURE.md  auto_retrain_model.py  cloudbuild.orchestrator.yaml  cloudbuild.skew.yaml  cloudbuild.yaml  collect_data.py  config.py  config.yaml  deploy.sh  deploy_retrain_function.sh  deploy_with_config.sh  evaluate.py  main.py  model_evaluation.py  monthly_data_collection.py  test_retrain.py  (+8 more)
(+135 files in other folders)
